Define a socket with address info that we get from getaddrinfo method, and use that file_descriptor to make a connection with by calling connect() function from socket.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # 4. Create the executable
 # Syntax: add_executable(ExecutableName source_file.cpp)
-add_executable(explorer src/ExploreAddress.cpp)
+file(GLOB SRC_FILES "./src/*.cpp")
+add_executable(tcpClient ${SRC_FILES})
